syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.dto";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "constant/profile_access_strategy.proto";

message UserInfo {
    google.protobuf.Int64Value id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue intro = 3;
    google.protobuf.StringValue profile_picture_url = 4;
    google.protobuf.Int64Value registration_date = 5;
    google.protobuf.Int64Value deletion_date = 6;
    google.protobuf.BoolValue active = 7;
    ProfileAccessStrategy profile_access_strategy = 8;
}
