syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.dto";
option java_multiple_files = true;

import "constant/user_status.proto";
import "constant/device_type.proto";

message UserStatusDetail {
    int64 user_id = 1;
    UserStatus user_status = 2;
    repeated DeviceType using_device_types = 3;
}
