syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message QueryUsersInfosNearbyRequest {
    float latitude = 1;
    float longitude = 2;
    google.protobuf.FloatValue distance = 3;
    google.protobuf.UInt32Value maxNumber = 4;
}
