syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

message QueryUsersOnlineStatusRequest {
    repeated int64 users_ids = 1;
}