syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

message CreateFriendRequestRequest {
    int64 recipient_id = 1;
    string content = 2;
}
