syntax = "proto3";

package im.turms.proto;

import "google/protobuf/wrappers.proto";

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

message CreateRelationshipRequest {
    int64 user_id = 1;
    bool is_blocked = 2;
    google.protobuf.Int32Value group_index = 3;
}