syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message DeleteRelationshipRequest {
    int64 related_user_id = 1;
    google.protobuf.Int32Value group_index = 2;
    google.protobuf.Int32Value target_group_index = 3;
}
