syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message QueryRelationshipsRequest {
    repeated int64 related_users_ids = 1;
    google.protobuf.BoolValue is_blocked = 2;
    google.protobuf.Int32Value group_index = 3;
    google.protobuf.Int64Value last_updated_date = 4;
}
