syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

message UpdateRelationshipGroupRequest {
    int32 group_index = 1;
    string new_name = 2;
}
