syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message UpdateRelationshipRequest {
    int64 related_user_id = 1;
    google.protobuf.BoolValue blocked = 2;
    google.protobuf.Int32Value new_group_index = 3;
    google.protobuf.Int32Value delete_group_index = 4;
}
