syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "constant/profile_access_strategy.proto";

message UpdateUserRequest {
    google.protobuf.StringValue password = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue intro = 3;
    google.protobuf.StringValue profile_picture_url = 4;
    ProfileAccessStrategy profile_access_strategy = 5;
}
