syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.response";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

import "dto/signal/acknowledge.proto";

import "request/turms_request.proto";

import "response/common/int64_values.proto";
import "response/common/int64_values_with_version.proto";
import "response/group/group_invitations_with_version.proto";
import "response/group/group_join_questions_with_version.proto";
import "response/group/group_join_requests_with_version.proto";
import "response/group/group_members_with_version.proto";
import "response/group/groups_with_version.proto";
import "response/message/message_statuses.proto";
import "response/message/messages.proto";
import "response/message/messages_with_total_list.proto";
import "response/user/user_friend_requests_with_version.proto";
import "response/user/user_relationship_groups_with_version.proto";
import "response/user/user_relationships_with_version.proto";
import "response/user/users_infos_with_version.proto";
import "response/user/users_online_statuses.proto";

message TurmsResponse {
    // Note: request_id is allowed to be duplicated because
    // it is used for clients to identify the response of the same request id in a session
    int64 request_id = 1;
    int32 code = 2;
    google.protobuf.StringValue reason = 3;
    Data data = 4;
    TurmsRequest notification = 5;
    // requester_id only exists when a requester trigger a notification to its recipients
    // Note: Do not move requester_id to TurmsRequest because it needs to rebuild a whole TurmsResponse
    // when recipients need the requester_id.
    google.protobuf.Int64Value requester_id = 6;

    message Data {
        oneof kind {
            Int64Values ids = 1;
            Int64ValuesWithVersion ids_with_version = 2;
            google.protobuf.BoolValue success = 3;

            Acknowledge acknowledge = 4;

            Messages messages = 5;
            MessageStatuses message_statuses = 6;
            MessagesWithTotalList messages_with_total_list = 7;

            UsersInfosWithVersion users_infos_with_version = 8;
            UsersOnlineStatuses users_online_statuses = 9;
            UserFriendRequestsWithVersion user_friend_requests_with_version = 10;
            UserRelationshipGroupsWithVersion user_relationship_groups_with_version = 11;
            UserRelationshipsWithVersion user_relationships_with_version = 12;

            GroupInvitationsWithVersion group_invitations_with_version = 13;
            GroupJoinRequestsWithVersion group_join_requests_with_version = 14;
            GroupJoinQuestionsWithVersion group_join_questions_with_version = 15;
            GroupMembersWithVersion group_members_with_version = 16;
            GroupsWithVersion groups_with_version = 17;
        }
    }
}