syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.response";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "dto/user/user_info.proto";

message UsersInfosWithVersion {
    repeated UserInfo user_infos = 1;
    google.protobuf.Int64Value last_updated_date = 2;
}